# commit-classifier

./: README.md  nlp.py  pyproject.toml
scripts/: setup.sh
